--- a/css/layout.css
+++ b/css/layout.css
@@ -2,9 +2,7 @@
     min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, minmax(75px, auto));
-    grid-gap: 20px;
- 
+    grid-template-rows: repeat(3, minmax(50px, auto));
     grid-template-areas: 
         "banner"
         "pageContent"
@@ -13,12 +11,13 @@
  
  .banner {
     grid-area: banner;
-    text-align: center;
-    /* position: fixed;
-    left: 0;
-    top: 0; */
+    position: fixed;
+    width: 100vw;
  }
  
+ .nav {
+     font-size: 1.1em;
+ }
  .pageContent {
     grid-area: pageContent;
  }
@@ -33,14 +32,32 @@
         justify-content: space-around;
     }
 
+    #subheading {
+        text-align: left;
+    }
+    .nav {
+        margin-top: 32.16px;
+    }
+
     .navBar:hover .navList {
         display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
+        flex-direction: column;
     }
+
+    .menu {
+        box-shadow: 0px 50px 0px 0px rgba(211, 211, 211, 0.08),
+                    -80px 0px 0px 0px rgba(211, 211, 211, 0.08),
+                    -160px 0px 0px 0px rgba(211, 211, 211, 0.05),
+                    0px 100px 0px 0px rgba(211, 211, 211, 0.05);
+    }
+                    
 }
 
 @media (min-width: 800px) {
+    .nav {
+        font-size: 1.2em;
+    }
+    
     .images {
         width: 300px;
         height: 300px;
@@ -63,7 +80,6 @@
     }
     
     .pageContent {
-        border-top: 4px gray solid;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: repeat(3, auto);
@@ -76,26 +92,50 @@
 
 @media (min-width: 1100px) {
 
+    .banner {
+        justify-content: space-between;
+    }
+
+    .header {
+        margin-left: 3em;
+    }
+
+    .nav {
+        margin-right: 3em;
+        font-size: 1.4em;
+    }
+
+    .navBar:hover .navList {
+        display: flex;
+        flex-direction: row;
+    }
+
     .images {
         width: 250px;
         height: 250px;
     }
 
-    .header {
-        grid-area: header;
-    }
-   
-    .nav {
-        grid-area: nav;
+    .menu {
+        box-shadow: -60px 0px 0px 0px rgba(211, 211, 211, 0.08),
+                    -130px 0px 0px 0px rgba(211, 211, 211, 0.06),
+                    -200px 0px 0px 0px rgba(211, 211, 211, 0.05),
+                    -270px 0px 0px 0px rgba(211, 211, 211, 0.04),
+                    -340px 0px 0px 0px rgba(211, 211, 211, 0.03),
+                    -410px 0px 0px 0px rgba(211, 211, 211, 0.02),
+                    -480px 0px 0px 0px rgba(211, 211, 211, 0.01);
     }
 
+    .transitionIntro {
+        border-radius: 5px;
+        margin: 2em;
+    }
     .pageContent {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: repeat(3, auto);
+        grid-template-rows: repeat(2, auto);
         grid-template-areas: 
             "dots lines figures"
-            "transitionIntro transitionIntro transitionIntro";           
+            "dots transitionIntro transitionIntro";
     }
 
 }
