sets grid layout on form

--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,10 @@ p {
 
 /* ------------------------>> DATA.HTML*/
 
+.pageContentData {
+    margin-top: 11em;
+}
+
 form {
     max-width: 450px;
     margin: 0 auto;
