--- a/css/layoutData.css
+++ b/css/layoutData.css
@@ -1,4 +1,4 @@
-/* ------------------------>> Basic Layout*/
+
 .page {
     min-height: 100vh;
     display: grid;
@@ -6,7 +6,7 @@
     grid-template-rows: repeat(3, minmax(50px, auto));
     grid-template-areas: 
         "banner"
-        "pageContent"
+        "pageContentData"
         "footer";
  }
  
@@ -19,8 +19,8 @@
  .nav {
      font-size: 1.1em;
  }
- .pageContent {
-    grid-area: pageContent;
+ .pageContentData {
+    grid-area: pageContentData;
  }
 
  .footer {
@@ -36,6 +36,7 @@
     #subheading {
         text-align: left;
     }
+
     .nav {
         margin-top: 32.16px;
     }
@@ -59,36 +60,6 @@
         font-size: 1.2em;
     }
     
-    .images {
-        width: 300px;
-        height: 300px;
-    }
-
-    .dots {
-        grid-area: dots;
-    }
-   
-    .lines {
-        grid-area: lines;
-    }
-   
-    .figures {
-        grid-area: figures;
-    }
-   
-    .transitionIntro {
-        grid-area: transitionIntro;
-    }
-    
-    .pageContent {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(3, auto);
-        grid-template-areas: 
-           "dots lines"
-           "figures figures"
-           "transitionIntro transitionIntro";
-    }
 }
 
 @media (min-width: 1100px) {
@@ -111,11 +82,6 @@
         flex-direction: row;
     }
 
-    .images {
-        width: 250px;
-        height: 250px;
-    }
-
     .menu {
         box-shadow: -60px 0px 0px 0px rgba(211, 211, 211, 0.08),
                     -130px 0px 0px 0px rgba(211, 211, 211, 0.06),
@@ -126,17 +92,5 @@
                     -480px 0px 0px 0px rgba(211, 211, 211, 0.01);
     }
 
-    .transitionIntro {
-        border-radius: 5px;
-        margin: 2em;
-    }
-    .pageContent {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: repeat(2, auto);
-        grid-template-areas: 
-            "dots lines figures"
-            "dots transitionIntro transitionIntro";
-    }
 
 }
