--- a/css/style.css
+++ b/css/style.css
@@ -139,12 +139,13 @@ p {
 /* ------------------------>> DATA.HTML*/
 
 .pageContentData {
-    margin-top: 11em;
+    margin-top: 9em;
 }
 
 form {
     max-width: 450px;
     margin: 0 auto;
+    margin-top: 2em;
     padding-left: 20px;
     border: 1px solid lightgrey;
     border-radius: 10px;
@@ -264,16 +265,51 @@ input[type="radio"]:checked + label {
 }
 
 /* ------------------------>> PALETTE*/
+#buttonNav {
+    background-color: white;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    margin-top: 0;
+}
 
 .button, 
 #tryAgain {
     width: 100px;
     height: 100px;
-    background-color: rgba(211, 211, 211, 0.5);
-    border: grey;
     border-radius: 10px;
-    color: white;
     font-size: 1.2em;
+}
+
+#tryAgain {
+    text-align: center;
+    background-color: rgba(211, 211, 211, 0.5);
+    border: 2px solid grey;
+}
+
+#tryAgain:hover {
+    cursor: pointer;
+    background-color: rgba(211, 211, 211, 0.3);
+    border: 2px solid rgba(211, 211, 211, 0.5 );
+}
+
+.show {
+    color: white;
+    background-color: rgb(180, 233, 228);
+    border: 2px solid turquoise;
+}
+
+.show:hover {
+    background-color:  rgba(180, 233, 228, 0.5);
+}
+
+.hide {
+    color: white;
+    background-color: rgb(248, 185, 174);
+    border: 2px solid tomato;
+}
+
+.hide:hover {
+    background-color: rgba(248, 185, 174, 0.5);
 }
 
 .dot {
@@ -287,12 +323,20 @@ input[type="radio"]:checked + label {
     margin: 20px;
 }
 
+#grid,
+#grid2,
+#grid3 {
+    background-color: rgba(211, 211, 211, 0.1);
+    padding: 10px;
+    border-radius: 10px;
+    margin: 1em 0;
+}
+
 .rgbValues {
     color: rgb(211, 211, 211);
     background-color: rgba(211, 211, 211, 0.1);
     border-radius: 10px;
     padding: 10px;
-    /* text-align: center; */
     font-size: 1em;
     line-height: 2em;
 }
