--- a/css/layoutData.css
+++ b/css/layoutData.css
@@ -42,7 +42,6 @@
 
  #buttonNav {
     grid-area: buttonNav;
-    /* margin-bottom: 5em; */
     width: 100%;
  }
 
@@ -55,9 +54,7 @@
      grid-area: rgbSection;
  }
 
-/* <----------------------------->
- <----Elements of Palette----> */
-
+/* <----Elements of Palette---->  */
 /* <----Button Nav----> */
  #buttonNav {
      display: flex;
@@ -75,15 +72,19 @@
 
 /* <----RgbValues----> */
 #rgbSection {
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
 }
 
 .rgbValues { 
-    margin: 3em;
+    margin: 1.5em;
+    text-align: center;
+    /* margin: 3em;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-start; */
 }
 
 /* <----Media Queries----> */
